[gd_scene load_steps=27 format=3 uid="uid://bkqebfftf76n3"]

[ext_resource type="Theme" uid="uid://bueidph1nopmi" path="res://componentes/popUps/popUpFundo.tres" id="1_aa541"]
[ext_resource type="Script" path="res://componentes/popUps/popUpFormPergunta/popUpFormPergunta.gd" id="2_8xtpa"]
[ext_resource type="Theme" uid="uid://dvbp11qywc6mv" path="res://componentes/popUps/popUp.tres" id="3_c3fvs"]
[ext_resource type="FontFile" uid="uid://hoguj3iguvyo" path="res://resources/fonts/Nunito/static/Nunito-Black.ttf" id="4_rjvwc"]
[ext_resource type="FontFile" uid="uid://bkberxkouofus" path="res://resources/fonts/Nunito/static/Nunito-Bold.ttf" id="5_bnd3p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ycxya"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j4h42"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o5tds"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hlfid"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_2g45q"]
color = Color(0.227451, 0.258824, 0.521569, 1)
thickness = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgia7"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.7, 0.7, 0.7, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d4xpe"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n1hf1"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_fge2d"]
TextEdit/colors/font_color = Color(0.313726, 0.313726, 0.313726, 1)
TextEdit/colors/font_placeholder_color = Color(0.6, 0.6, 0.6, 1)
TextEdit/font_sizes/font_size = 24
TextEdit/fonts/font = ExtResource("5_bnd3p")
TextEdit/styles/focus = SubResource("StyleBoxFlat_jgia7")
TextEdit/styles/normal = SubResource("StyleBoxFlat_d4xpe")
TextEdit/styles/read_only = SubResource("StyleBoxFlat_n1hf1")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lcda0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_305nx"]
bg_color = Color(0.16, 0.184, 0.4, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5ki4"]
bg_color = Color(0.160784, 0.184314, 0.4, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38ys8"]
bg_color = Color(0.227451, 0.258824, 0.521569, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_gptgx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pp6hx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8qh0"]
bg_color = Color(0.18, 0.4, 0.198333, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kphol"]
bg_color = Color(0.25098, 0.501961, 0.270588, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d2kga"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bppun"]
bg_color = Color(0.55, 0.22, 0.22, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tiyvw"]
bg_color = Color(0.619608, 0.278431, 0.278431, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xidoe"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="FundoPopUp" type="PanelContainer"]
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)
theme = ExtResource("1_aa541")
script = ExtResource("2_8xtpa")

[node name="PopUp" type="Panel" parent="."]
custom_minimum_size = Vector2(900, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_c3fvs")
metadata/_edit_use_anchors_ = true

[node name="ContainerVertical" type="VBoxContainer" parent="PopUp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(450, 353)

[node name="Titulo" type="Label" parent="PopUp/ContainerVertical"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_rjvwc")
theme_override_font_sizes/font_size = 40
text = "NOVO [ENTIDADE]"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="FecharModal" type="Button" parent="PopUp/ContainerVertical/Titulo"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.953333
anchor_top = -0.0196078
anchor_right = 1.00833
anchor_bottom = 0.803922
offset_right = -2.0
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.658824, 0.188235, 0.188235, 1)
theme_override_colors/font_pressed_color = Color(0.658824, 0.188235, 0.188235, 1)
theme_override_colors/font_focus_color = Color(0.658824, 0.188235, 0.188235, 1)
theme_override_colors/font_color = Color(0.658824, 0.188235, 0.188235, 1)
theme_override_fonts/font = ExtResource("4_rjvwc")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ycxya")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_j4h42")
theme_override_styles/hover = SubResource("StyleBoxEmpty_o5tds")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hlfid")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ycxya")
text = "X"
metadata/_edit_use_anchors_ = true

[node name="Separador" type="HSeparator" parent="PopUp/ContainerVertical"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_2g45q")

[node name="MarginForm" type="MarginContainer" parent="PopUp/ContainerVertical"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30

[node name="Form" type="VBoxContainer" parent="PopUp/ContainerVertical/MarginForm"]
layout_mode = 2

[node name="PerguntaConteudo" type="TextEdit" parent="PopUp/ContainerVertical/MarginForm/Form"]
custom_minimum_size = Vector2(0, 175)
layout_mode = 2
theme = SubResource("Theme_fge2d")
placeholder_text = "Escreva sua pergunta aqui..."
wrap_mode = 1
caret_blink = true

[node name="Label" type="Label" parent="PopUp/ContainerVertical/MarginForm/Form"]
layout_mode = 2

[node name="Alternativas" type="VBoxContainer" parent="PopUp/ContainerVertical/MarginForm/Form"]
layout_mode = 2
size_flags_vertical = 3

[node name="HeaderAlternativas" type="HBoxContainer" parent="PopUp/ContainerVertical/MarginForm/Form/Alternativas"]
layout_mode = 2

[node name="InserirNovaAlternativa" type="Button" parent="PopUp/ContainerVertical/MarginForm/Form/Alternativas/HeaderAlternativas"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_rjvwc")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_lcda0")
theme_override_styles/hover = SubResource("StyleBoxFlat_305nx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e5ki4")
theme_override_styles/normal = SubResource("StyleBoxFlat_38ys8")
text = "Inserir nova alternativa"

[node name="AlternativasContainer" type="VBoxContainer" parent="PopUp/ContainerVertical/MarginForm/Form/Alternativas"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_gptgx")

[node name="RodapeBotoes" type="HBoxContainer" parent="PopUp/ContainerVertical/MarginForm/Form/Alternativas"]
layout_mode = 2

[node name="Salvar" type="Button" parent="PopUp/ContainerVertical/MarginForm/Form/Alternativas/RodapeBotoes"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_rjvwc")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_pp6hx")
theme_override_styles/hover = SubResource("StyleBoxFlat_k8qh0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k8qh0")
theme_override_styles/normal = SubResource("StyleBoxFlat_kphol")
text = "Salvar"

[node name="Fechar" type="Button" parent="PopUp/ContainerVertical/MarginForm/Form/Alternativas/RodapeBotoes"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_rjvwc")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_d2kga")
theme_override_styles/hover = SubResource("StyleBoxFlat_bppun")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bppun")
theme_override_styles/normal = SubResource("StyleBoxFlat_tiyvw")
text = "Cancelar"

[node name="MarginBottom" type="HSeparator" parent="PopUp/ContainerVertical/MarginForm/Form/Alternativas"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_xidoe")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
